Final LaTeX update (#28)

--- a/latex/appendix.tex
+++ b/latex/appendix.tex
@@ -2,9 +2,9 @@
 \label{chap:appendix}
 \addcontentsline{toc}{chapter}{Appendix}
 
-Source code and configuration files are available online at the Github repository located at 
+Source code and configuration files are available as an attachment to this paper and can be downloaded online from the Github repository located at 
 \begin{center}
-    https://github.com/pavel-semenov-1/kubernetes-security-assessment. 
+    \textit{https://github.com/pavel-semenov-1/kubernetes-security-assessment.}
 \end{center}
 
 Repository is structured as follows:
@@ -17,4 +17,4 @@ Repository is structured as follows:
     \item \textbf{web} folder holds the source code the thesis webpage.
 \end{itemize}
 
-There are multiple \textbf{README.md} files, which should guide anyone willing to recreate our test environment.
+There are multiple \textbf{README.md} files, which should guide anyone willing to recreate our test environment or deploy the KSA Dashboard.
