--- a/latex/implementation/dashboard.tex
+++ b/latex/implementation/dashboard.tex
@@ -24,3 +24,5 @@ In the top right corner of the dashboard is a \textbf{STATISTICS} button that pr
 		\label{img:ksa-dashboard-statistics}
 	\end{center}
 \end{figure}
+
+To extend the dashboard frontend with a new scanner, no actions are needed as it automatically pulls scanners from the database.
