--- a/latex/introduction/security_frameworks.tex
+++ b/latex/introduction/security_frameworks.tex
@@ -156,7 +156,7 @@ Inside the Kubernetes context, MITRE ATT\&CK Framework publishes techniques for 
 \begin{figure}[!hbt]
 	\begin{center}
 		\includegraphics[width=\textwidth]{images/mitre-attack-matrix.png}
-        \caption{MITRE ATT\&CK matrix for the Container platform.}
+        \caption{MITRE ATT\&CK matrix for the Container platform \cite{mitre-attack-framework}.}
 		\label{img:mitre-attack-matrix}
 	\end{center}
 \end{figure}
