--- a/latex/references.bib
+++ b/latex/references.bib
@@ -181,3 +181,24 @@
   author = {The Linux Foundation},
   note = {\url{https://kubernetes.io/docs/concepts/scheduling-eviction/pod-priority-preemption/}, Accessed: 20.4.2025}
 }
+
+% Datacamp article on Kubernetes vs Docker
+@article{datacamp-kubernetes-vs-docker,
+  title = {Kubernetes vs Docker: Differences Every Developer Should Know},
+  author = {Moez Ali},
+  note = {\url{https://www.datacamp.com/blog/kubernetes-vs-docker}, Accessed: 16.12.2024}
+}
+
+% Kubernetes documentation on its architecture
+@article{kubernetes-components,
+  title = {Kubernetes Components},
+  author = {The Linux Foundation},
+  note = {\url{https://kubernetes.io/docs/concepts/overview/components/}, Accessed: 16.12.2024}
+}
+
+% MITRE ATT&CK Framework
+@article{mitre-attack-framework,
+  title = {Containers Matrix},
+  author = {The MITRE Corporation},
+  note = {\url{https://attack.mitre.org/matrices/enterprise/containers/}, Accessed: 20.4.2024}
+}
