--- a/latex/research/methodology.tex
+++ b/latex/research/methodology.tex
@@ -1,10 +1,10 @@
 \section{Methodology}
 \label{sec:methodology}
 
-Research aims to assess scanner capabilties by performing quantative and qualitative analysis of the scan results against misconfigurations and vulnerabilities inside the cluster. In order to do so, a cluster environment populated with a variety of misconfigurations and vulnerabilities was prepared. Refer to the Section \ref{sec:experimental-environment} for the list of implemented vulnerabilities. Since the number of misconfigurations is known beforehand, no baseline is needed. Then, each selected security tool is executed against the cluster and the results are parsed. For the qualitative analysis we count the amount of vulnerabilities found, number of the missed categories, the amount of false positives and the number of vulnerabilities in each severity group. For the qualitative analysis we determine if the most critical misconfigurations were detected and assess how well the tool reports relevant details. This includes evaluating whether the scan output provides sufficient context for remediation, such as affected resources, potential impact, and suggested fixes.
+Research aims to assess scanner capabilties by performing quantative and qualitative analysis of the scan results against misconfigurations and vulnerabilities inside the cluster. In order to do so, a cluster environment populated with a variety of misconfigurations and vulnerabilities was prepared. Refer to the Section~\ref{sec:experimental-environment} for the list of implemented vulnerabilities. Since the number of misconfigurations is known beforehand, no baseline is needed. Then, each selected security tool is executed against the cluster and the results are parsed. For the qualitative analysis we count the amount of vulnerabilities found, number of the missed categories, the amount of false positives and the number of vulnerabilities in each severity group. For the qualitative analysis we determine if the most critical misconfigurations were detected and assess how well the tool reports relevant details. This includes evaluating whether the scan output provides sufficient context for remediation, such as affected resources, potential impact, and suggested fixes.
 
 To ensure fairness in comparison, all scanners were executed under the same conditions. Each tool was configured according to its documentation. Any limitations in scanner capabilities, such as an inability to scan certain Kubernetes objects or container runtime restrictions, are documented in further chapters.
 
-After obtaining scan results, a comparative analysis was conducted to identify patterns in detection capabilities across different tools. Specific attention was given to recurring false negatives -- misconfigurations that were not flagged despite being present.
+After obtaining scan results, a comparative analysis was conducted to identify patterns in detection capabilities across different tools.
 
 The findings from both quantitative and qualitative evaluations form the basis for determining if existing security tools can be relied upon to protect the cluster. This also helps to highlight the strengths and weaknesses of each tool and offers guidance on which scanners are best suited for Kubernetes security auditing based on different use cases.
