--- a/latex/terminology.tex
+++ b/latex/terminology.tex
@@ -5,7 +5,7 @@
 \begin{itemize}
     \setlength\itemsep{1px}
     \item \textbf{CI/CD pipeline} \\
-    CI/CD pipeline is a set of automatic tasks to be executed upon specific action resulting in ether failure on some of the pipeline stages or successful application deployment on the target environment. The aforementioned action might be a push into the source code repository or a manual pipeline run request. CI/CD pipeline usually includes build, test and deploy stages.
+    CI/CD pipeline is a set of automatic tasks to be executed upon specific action resulting in ether failure on some of the pipeline stages or successful application build and deployment on the target environment. The aforementioned action might be a push into the source code repository or a manual pipeline run request. CI/CD pipeline usually includes build, test and deploy stages.
     \item \textbf{Cloud} \\
     Term ``cloud'' is ususally used to describe an array of (remote, on-premise or hybrid) servers that operate as a single ecosystem used for various hosting services.
     \item \textbf{Cloud provider} \\
@@ -20,50 +20,48 @@
 
 \begin{itemize}
     \setlength\itemsep{1px}
-    \item \textbf{K8s} -- Kubernetes.
-    \item \textbf{OS} -- Operating System.
-    \item \textbf{VM} -- Virtual Machine.
-    \item \textbf{GUI} -- Graphical User Interface.
-    \item \textbf{CLI} -- Command-line Interface.
-    \item \textbf{CI/CD} -- Continuous Integration/Continuous Deployment.
-    \item \textbf{RBAC} -- Role Based Access Control.
-    \item \textbf{AWS} -- Amazon Web Services.
-    \item \textbf{TLS} -- Transport Layer Security.
-    \item \textbf{CSRF} -- Cross Site Request Forgery.
-    \item \textbf{XSS} -- Cross Site Scripting.
-    \item \textbf{OWASP} -- The Open Worldwide Application Security Project.
-    \item \textbf{TCP} -- Transmission Control Protocol.
+    \item \textbf{AI} -- Artificial Intelligence.
+    \item \textbf{AICPS} -- American Institute of Certified Public Accountants.
     \item \textbf{API} -- Application Programming Interface.
-    \item \textbf{NFS} -- Network File System.
+    \item \textbf{AWS} -- Amazon Web Services.
+    \item \textbf{CI/CD} -- Continuous Integration/Continuous Deployment.
+    \item \textbf{CIS} -- Center of Internet Security.
+    \item \textbf{CISA} -- Cybersecurity and Infrastructure Security Agency.
+    \item \textbf{CLI} -- Command-line Interface.
+    \item \textbf{CNCF} -- Cloud Native Computing Foundation.
+    \item \textbf{CPU} -- Central Processing Unit.
+    \item \textbf{CSI} -- Container Storage Interface.
+    \item \textbf{CSRF} -- Cross Site Request Forgery.
+    \item \textbf{CSV} -- Comma-separated Values.
+    \item \textbf{CVE} -- Common Vulnerabilities and Exposures.
+    \item \textbf{ECR} -- Elastic Container Registry.
+    \item \textbf{EU} -- European Union.
+    \item \textbf{ePHI} -- Electronic Protected Health Information.
+    \item \textbf{GCP} -- Google Cloud Platform.
+    \item \textbf{GDPR} -- General Data Protection Regulation.
+    \item \textbf{GUI} -- Graphical User Interface.
+    \item \textbf{HIPAA} -- Health Insurance Portability and Accountability Act.
+    \item \textbf{HTTP} -- Hypertext Transfer Protocol.
+    \item \textbf{IBM} -- International Business Machines.
+    \item \textbf{IaC} -- Infrastructure as Code.
     \item \textbf{iSCSI} -- Internet Small Computer Systems Interface.
-    \item \textbf{SBOM} -- Software Bill of Materials
-    \item \textbf{CVE} -- Common Vulnerabilities and Exposures
-    \item \textbf{IaC} -- Infrastructure as Code
-    \item \textbf{CIS} -- Center of Internet Security
-    \item \textbf{CNCF} -- Cloud Native Computing Foundation
-    \item \textbf{NSA} -- National Security Agency
-    \item \textbf{CISA} -- Cybersecurity and Infrastructure Security Agency
-    \item \textbf{IaC} -- Infrastructure as Code
-    \item \textbf{SBOM} -- Software Bill of Materials
-    \item \textbf{GCP} -- Google Cloud Platform
-    \item \textbf{NIST} -- National Institute of Standards and Technology
-    \item \textbf{SOC} -- Service Organization Control 
-    \item \textbf{PCI-DSS} -- Payment Card Industry Data Security Standard
-    \item \textbf{GDPR} -- General Data Protection Regulation
-    \item \textbf{HIPAA} -- Health Insurance Portability and Accountability Act
-    \item \textbf{EU} -- European Union
-    \item \textbf{ePHI} -- Electronic Protected Health Information
-    \item \textbf{AICPS} -- American Institute of Certified Public Accountants
-    \item \textbf{ECR} -- Elastic Container Registry
-    \item \textbf{PVC} -- PersistentVolumeClaim
-    \item \textbf{HTTP} -- Hypertext Transfer Protocol
-    \item \textbf{AI} -- Artificial Intelligence
-    \item \textbf{PDF} -- Portable Document Format
-    \item \textbf{CSV} -- Comma-separated Values
-    \item \textbf{CPU} -- Central Processing Unit
-    \item \textbf{TLS} -- Transport Layer Security
-    \item \textbf{LSA} -- Kubernetes Security Assessment
-    \item \textbf{IBM} -- International Business Machines
+    \item \textbf{K8s} -- Kubernetes.
+    \item \textbf{KSA} -- Kubernetes Security Assessment.
+    \item \textbf{NFS} -- Network File System.
+    \item \textbf{NIST} -- National Institute of Standards and Technology.
+    \item \textbf{NSA} -- National Security Agency.
+    \item \textbf{OS} -- Operating System.
+    \item \textbf{OWASP} -- The Open Worldwide Application Security Project.
+    \item \textbf{PCI-DSS} -- Payment Card Industry Data Security Standard.
+    \item \textbf{PDF} -- Portable Document Format.
+    \item \textbf{PVC} -- PersistentVolumeClaim.
+    \item \textbf{RBAC} -- Role Based Access Control.
+    \item \textbf{SBOM} -- Software Bill of Materials.
+    \item \textbf{SOC} -- Service Organization Control.
+    \item \textbf{TCP} -- Transmission Control Protocol.
+    \item \textbf{TLS} -- Transport Layer Security.
+    \item \textbf{VM} -- Virtual Machine.
+    \item \textbf{XSS} -- Cross Site Scripting.    
 \end{itemize}
 
 
