--- a/latex/implementation/data_design.tex
+++ b/latex/implementation/data_design.tex
@@ -11,7 +11,7 @@ Data design of the solution is very simple. Table \lstinline{scanner} holds the 
 	\end{center}
 \end{figure}
 
-Notice that both \textbf{vulnerability} and \textbf{misconfiguration} tables have \textbf{search\_vector} column. This column is generated when a new row is inserted or updated and used for the full-text search on these tables. Listing~\ref{lst:db-search-vector} shows the definition of the respective triggers for this column, which transform certain fields like misconfiguration id, description and title into tokens, which are then used to perform search like this: \lstinline{search_vector @@ plainto_tsquery(%s)}, where \lstinline{%s} is substitute string for the query.
+Notice that both \textbf{vulnerability} and \textbf{misconfiguration} tables have \lstinline{search_vector} column. This column is generated when a new row is inserted or updated and used for the full-text search on these tables. Listing~\ref{lst:db-search-vector} shows the definition of the respective triggers for this column, which transform certain fields like misconfiguration id, description and title into tokens, which are then used to perform search like this: \lstinline{search_vector @@ plainto_tsquery(%s)}, where \lstinline{%s} is substitute string for the query.
 
 \begin{lstlisting}[language=SQL, caption={[Search vector definition for misconfiguration inside the database initial script] Search vector definition for \lstinline{misconfiguration} inside the database initial script.}, label={lst:db-search-vector}]
     alter table misconfiguration 
