--- a/latex/introduction/containerization.tex
+++ b/latex/introduction/containerization.tex
@@ -1,22 +1,22 @@
 \section{Containerization}
 
-When talking about the Kubernetes it is essential to be familiar with the technology of containerization. This section introduces the reader to the basics of the containerization. We start by giving a short definition, then we examine core concepts of the containerization such as container image and Docker. Then, we compare it to the traditional means of application deployment. Lastly, we examine the security on the container image level.
+When talking about the Kubernetes, it is essential to be familiar with the technology of containerization. This section introduces the reader to the basics of the containerization. We start by giving a short definition, then we examine core concepts of the containerization such as container image and Docker. We also compare it to the traditional means of application deployment. Lastly, we examine the security on the container image level.
 
 \subsection{Overview}
 
 According to IBM, containerization is ``the packaging of software code with just the operating system libraries and dependencies required to run the code to create a single lightweight executable -- called a container -- that runs consistently on any infrastructure'' \cite{ibm-containerization}.
 
-Although containers are built to be infrastructure-agnostic, there are still certain compatibility considerations to keep in mind. One significant factor is processor architecture. Containers built for a specific architecture family (e.g., arm64, amd64, or x86) are generally not cross-compatible with infrastructures based on different architectures. However, it is possible to build multi-architecture containers that support multiple processor architectures in a single image, enhancing the flexibility and portability of the containerized applications across diverse environments.
+Although containers are built to be infrastructure-agnostic, there are still certain compatibility considerations to keep in mind. One significant factor is processor architecture. Containers built for a specific architecture family (e.g., arm64, amd64, or x86) are generally not cross-compatible with infrastructures built on different architectures. However, it is possible to build multi-architecture containers that support multiple processor architectures in a single image, enhancing the flexibility and portability of the containerized applications across diverse environments.
 
 \subsection{Container Image}
 
-Container images are software application packages, which are shipped with all required libraries, binaries and configurations. In another words, container images are lightweight and higly portable artifacts. Usually container images are stored in Container Registries, either public (e.g. Dockerhub) or private. When an image transitions into the running state, it becomes a container.
+Container images are software application packages, which are shipped with all required libraries, binaries and configurations. In another words, container images are lightweight and higly portable artifacts. Usually container images are stored in Container Registries, either public (like Dockerhub or Quay) or private. When an image transitions into the running state, it becomes a container.
 
 Container images are comprised of multiple layers. At the base layer there is usually some lightweight Linux distribution. Then, each layer introduces a change in the environment, this change might concern the code or binary, runtimes, dependencies, and other objects required to run an application. Resulting image is, thus, a combination of those layers.
 
 \subsection{Docker}
     
-Docker is the most widely used containerization tool. It provides the tools to build, run and store containers. Docker Engine is a collective name for the Docker build toolkit. First, there is a \lstinline{dockerd} or Docker Daemon, which is a server running in the backend. Secondly, the user intercts with Docker CLI or Docker Client to build and run images. Docker Clients communicates with Docker Daemon through the Rest API served at the backend. Then, there is Docker Compose, which a simple orchestration tool for the containers. It can be used to compose a few containers into a system with a shared network and storage. Lastly, Dockerhub is a public container registry, where the bulk of the publicly available images are stored.
+Docker is the most widely used containerization tool. It provides the tools to build, run and store containers. Docker Engine is a collective name for the Docker build toolkit. First, there is a \lstinline{dockerd} or Docker Daemon, which is a server running in the backend. Secondly, the user intercts with Docker CLI or Docker Client to build and run images. Docker lient communicates with Docker Daemon through the Rest API served at the backend. Then, there is Docker Compose, which a simple orchestration tool for the containers. It can be used to compose a few containers into a system with a shared network and storage. Lastly, Dockerhub is a public container registry, where the bulk of the publicly available images are stored.
 
 Images are built based on the Dockerfile, which is a set of instructions. Each instruction introduces a new layer to the image. Layers can then be smartly reused by the Docker Engine to build different images with similar bases. Listing~\ref{lst:dockerfile} demonstates an example of the Dockerfile. Each Dockerfile starts with a \lstinline{FROM} command, which specifies the base image to use for this container. The \lstinline{FROM} keyword is followed by the base image name. In our case, \lstinline{registry.redhat.io} is the registry address. It is followed by the repository name (\lstinline{ubi8} in our case), which is separated from the registry name by a single slash and may be preceeded by the namespace. Lastly, tag follows repository name and separated with a colon from it. Both registry address and tag are optional. In case registry name is omitted, Docker will search for the image in the Dockerhub. If the tag is not provided, Docker will fetch \lstinline{latest} tag.
 
@@ -43,7 +43,7 @@ Figure~\ref{img:containers-vs-virtual-machines} provides a side-by-side comparis
 \begin{figure}[!hbt]
 	\begin{center}
 		\includegraphics[width=0.75\textwidth]{images/containers-vs-virtual-machines.jpg}
-        \caption{Side-by-side comparison of VM and container infrastructures.}
+        \caption{Side-by-side comparison of VM and container infrastructures \cite{datacamp-kubernetes-vs-docker}.}
 		\label{img:containers-vs-virtual-machines}
 	\end{center}
 \end{figure}
